--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-register": "^6.9.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.3.0",
+    "chromedriver": "^2.21.2",
     "cucumber": "^1.0.0",
     "enzyme": "^2.2.0",
     "eslint": "^0.23.0",
