modularized react components, added inline styling, set up d3 charts to render in react, correctly pass state data to update charts, implemented bootstrap, created lg - md responsiveness(needs mobile), created new directory utilities and added createButton function, started unit testing, added chart directories

--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
+    "d3": "^3.5.17",
     "lodash": "^4.13.1",
     "react": "^15.0.1",
+    "react-d3-library": "^1.1.4",
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
